--- a/assets/estilos.css
+++ b/assets/estilos.css
@@ -1,14 +1,24 @@
-*{
-    margin: 0%;
-    padding: 0%;
-    }
+
     
-    /*     Css del Menu*/
     
-    .contenedor{
-    background-color: grey;
+    *{
+margin: 0%;
+padding: 0%;
+
+
+
+
+
+}
+
+/*     Css del Menu*/
+
+
+
+.contenedor{
+    background-color: rgb(16, 11, 41);
     width: 100%;
-    height: 50px;
+    height: 70px;
     
     
         text-align: center;
@@ -18,15 +28,17 @@
         align-content: center;
         justify-content: space-between;
     position: fixed;
-    
+    color: #d4c70b;
         
     }
     
     
     
+    
+    
     .link{
-        background-color: gray;
-      color: #000000;
+        background-color: rgb(18, 0, 37);
+      color: #d4c70b;
       padding: 10px;
       border-radius: 20px;
       text-decoration: none;
@@ -34,89 +46,104 @@
       margin: 10px;
       
     }
+    .link:hover{
+        background-color: rgb(255, 255, 255);
+        color: #0c0b0b;
     
-    
-    /*     Css del Slider */
-    
-    .slider {
-        width: 100%;
-        margin: auto;
-        overflow: hidden;
-        background-color: burlywood;
     
     }
     
-    .slider ul {
+    
+
+
+/*     Css del Slider */
+.contenedor2{
+
+
+background-color: rgb(18, 2, 53);
+color: white;
+
+
+}
+.slider {
+	width: 100%;
+	margin: auto;
+	overflow: hidden;
+    background-color: burlywood;
+    
+}
+
+.slider ul {
+	display: flex;
+	padding: 0;
+	width: 400%;
+	
+	animation: cambio 2s infinite alternate ;
+}
+
+.slider li {
+	width: 100%;
+	list-style: none;
+}
+
+.slider img {
+   
+    height: 400px;
+	width: 100%;
+}
+
+@keyframes cambio {
+	0% {margin-left: 0;}
+	20% {margin-left: 0;}
+	
+	25% {margin-left: -100%;}
+	45% {margin-left: -100%;}
+	
+	50% {margin-left: -200%;}
+	70% {margin-left: -200%;}
+	
+	75% {margin-left: -300%;}
+	100% {margin-left: -300%;}
+}
+
+
+
+/*     Css de los estrenos */
+.estrenos{
+
+
+    
+    
+    
+        text-align: center;
         display: flex;
-        padding: 0;
-        width: 400%;
-        
-        animation: cambio 2s infinite alternate ;
-    }
+        flex-direction: row;
+        align-items: center;
+        align-content: center;
+        justify-content: space-between;
+   
     
-    .slider li {
-        width: 100%;
-        list-style: none;
-    }
-    
-    .slider img {
-       
-        height: 400px;
-        width: 100%;
-    }
-    
-    @keyframes cambio {
-        0% {margin-left: 0;}
-        20% {margin-left: 0;}
-        
-        25% {margin-left: -100%;}
-        45% {margin-left: -100%;}
-        
-        50% {margin-left: -200%;}
-        70% {margin-left: -200%;}
-        
-        75% {margin-left: -300%;}
-        100% {margin-left: -300%;}
-    }
-    
-    
-    
-    /*     Css de los estrenos */
-    .estrenos{
-    
-    
-        
-        
-        
-            text-align: center;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            align-content: center;
-            justify-content: space-between;
-       
-        
-    }
-    
-    .imagenpeli{
-    width: 240px;
-    height: 290px;
-    
-    
-    }
-    
-    
-    
-    
-    /*     Css de la parte final */
-    
-    
-    
-    .final{
-    margin-top: 20px;
-    background-color: #000000;
-    width: 100%;
-    height: 500px;
-    
-    
-    }
+}
+
+.imagenpeli{
+width: 240px;
+height: 290px;
+
+
+}
+
+
+
+
+/*     Css de la parte final */
+
+
+
+.final{
+margin-top: 30px;
+background-color: #000000;
+width: 100%;
+height: 300px;
+color:white;
+
+}
